[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/orGate.gd" type="Script" id=1]
[ext_resource path="res://sprites/or.png" type="Texture" id=2]
[ext_resource path="res://scenes/input.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/output.tscn" type="PackedScene" id=4]

[node name="orGate" type="Node2D"]

script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="inputNodeA" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( -40, -12 )

[node name="inputNodeB" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( -40.0968, 10.9724 )

[node name="outputNode" parent="." index="3" instance=ExtResource( 4 )]

position = Vector2( 41.1805, 0.406387 )


